--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
                     Модель была разработана в начале 1950 года Тедом Маккарти совместно с гитаристом Лесом Полом. 
                     Первый Gibson Les Paul был продан в 1952 году. Les Paul — одна из самых известных и 
                     часто копируемых различными производителями электрогитар в мире, наряду со Stratocaster и Telecaster.</p>
-                <img class="les-paul" src="http://www.decadesexperience.com/CFM/goldtop-5.jpg"
-                            width="50%"
-                            height="50%"/>
+                <img class="les-paul" src="http://www.decadesexperience.com/CFM/goldtop-5.jpg"/>
                 <p>Les Paul – модель, на мой взгляд самая универсальная, чаще всего оснащена двумя хамбакерами (HH), 
                     струны держит бридж без машинки-тремоло.  
                     Я видел, как на этой гитаре играют легкий джаз и брутальный Death metal, 
@@ -68,9 +66,7 @@
                     Наряду с Gibson Les Paul, Gibson SG и Fender Telecaster является одной из самых известных и распространённых моделей электрогитар в мире.</p>
                 <p>Stratocaster очень широко копируется, в результате чего название «Stratocaster» или «Strat» часто используют
                     для обозначения любой гитары с теми же техническими особенностями, независимо от производителя.</p>
-                <img class="strat" src="https://www.projectmusic.net/ekmps/shops/projectmusic/images/fender-american-original-60s-stratocaster-olympic-white-[2]-21579-1-p.jpg"
-                    width="50%"
-                    height="50%">
+                <img class="strat" src="https://www.projectmusic.net/ekmps/shops/projectmusic/images/fender-american-original-60s-stratocaster-olympic-white-[2]-21579-1-p.jpg">
                 <p>Stratocaster – это одна из самых распространенных форм электрогитары, которая, 
                     чаще всего имеет на борту 3 сингла (SSS) или 2 сингла и 1 хамбакер (SSH), 
                     оснащена классической машинкой-тремоло. Как один из самых универсальных инструментов, 
@@ -110,9 +106,7 @@
                 <p>Новая модель по просьбе Лес Пола была названа «SG», аббревиатура которой обозначала «Цельная гитара» («Solid Guitar»). 
                     Хотя название Les Paul было официально удалено в 1961 году, на SG подпись Les Paul скрывалась до конца 1963 года.</p>
                 <p>Благодаря своей популярности и старинному наследию, стиль корпуса SG часто копируют другие производители, хотя гораздо реже, чем Les Paul и Fender Stratocaster.</p>
-                <img class="sg" src="https://i.pinimg.com/736x/39/aa/be/39aabec9f07a3285859a9afba88756ef.jpg"
-                width="50%"
-                height="50%">
+                <img class="sg" src="https://i.pinimg.com/736x/39/aa/be/39aabec9f07a3285859a9afba88756ef.jpg">
                 <p>SG – модель с двумя хамбакерами (HH), струны держит бридж без тремоло, отличная гитара для блюза и рока.
                     Мне довелось держать эту прелесть в руках. Гитара очень лёгкая и рука прям скользит по грифу. Звук выдаёт с характерным "хрустом".</p>
                 <section>
