refactor index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h3>Амбасадоры Les Paul</h3>
                         <div class="slash">
                             <p>Слэш </p>
-                            <img class="slash-img" alt="Slash (гитарист Guns N' Roses)" src="https://o-tendencii.com/uploads/posts/2022-05/1653888242_18-o-tendencii-com-p-slesh-gitarist-tatu-foto-20.jpg">
+                            <img class="slash-img" alt="Slash" src="https://o-tendencii.com/uploads/posts/2022-05/1653888242_18-o-tendencii-com-p-slesh-gitarist-tatu-foto-20.jpg">
                         </div>
                         <div class="bob">
                             <p> Боб Марли </p>
