--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="musicians">
                                 <p>Джимми Пейдж</p>
                                 <img class="musicians-img" alt="Jimmy Page" src="https://avatars.dzeninfra.ru/get-zen_doc/3006682/pub_60c1ae53e30bc348f43ab59c_60c1bec17cb731529f8ad591/scale_1200">
-                                <audio src="music/Led_Zeppelin_-_Immigrant_Song_48018672.mp3"></audio>
+                                <audio src="music/Led_Zeppelin_-_Immigrant_Song_48018672.mp3" controls></audio>
                             </div>
                             <div class="musicians">
                                 <p>Томми Айоми</p>
