--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h3>Амбасадоры Les Paul</h3>
                         <div class="musicians">
                             <p>Слэш </p>
-                            <img class="musicians-img" alt="Slash" src="https://o-tendencii.com/uploads/posts/2022-05/1653888242_18-o-tendencii-com-p-slesh-gitarist-tatu-foto-20.jpg">
+                            <img class="musicians-img" alt="Slash" src="https://webpulse.imgsmail.ru/imgpreview?mb=webpulse&key=pulse_cabinet-image-d8cd06a7-d3f1-4041-9a62-7d196aef98ce">
                             <audio src="music/Guns_N_Roses_-_Dont_Damn_Me_47963129.mp3" controls></audio>
                         </div>
                         <div class="musicians">
